--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: 
   cached_network_image: 
   permission_handler: 
+  webview_flutter: ^2.3.1
 
   
   
@@ -71,7 +72,27 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - images/AH-92504.JPG
+    - images/AH-92624.JPG
+    - images/AH-92637.JPG
+    - images/AH-92941.JPG
+    - images/AH-92105.JPG
+    - images/disease/aphids.jpg
+    - images/disease/thrips field.jpg
+    - images/disease/whitefly.jpeg
+    - images/disease/fruitborer.jpg
+    - images/disease/mites.jpg
+    - images/disease/damping off.jpg
+    - images/disease/anthracnose.jpg
+    - images/disease/powdery mildew.jpg
+    - images/disease/wilt.jpg
+    - images/disease/choaneophora blight.jpg
+    - images/disease/bacterial leaf spot.jpg
+    - images/disease/cercospora.jpg
+    - images/disease/gemini virus.jpg
+    - images/dstlogo.jpg
+    - images/klu.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
